# missing_file_cc

./: .env.example  ARCHITECTURE.md  ARCHITECTURE_IMPLEMENTED.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  PHASE2_SUMMARY.md  QUICK_START.md  README.md  cli_report.html  database_schema_review.md  example_phase3_complete.py  example_usage.py  example_with_adapters.py  flow.md  main.py  my_question.md  pyproject.toml  test_config.yaml  扫描流程.md
docs/: HTML_REPORT_IMPROVEMENTS.md  PHASE2_COMPLETE.md  PHASE3_SUMMARY.md  PHASE4_COMPLETE.md  PHASE4_PLAN.md  README.md  STATISTICS_UPDATE.md
examples/: README.md  example_phase3_complete.py  example_report_optimization.py  example_simple_local.py  example_usage.py  example_with_adapters.py
missing_file_check/: __init__.py
missing_file_check/adapters/: __init__.py  api_adapter.py  base.py  factory.py  ftp_adapter.py  local_adapter.py
missing_file_check/analyzers/: __init__.py  base.py  history_analyzer.py  ownership_analyzer.py  pipeline.py  reason_analyzer.py
missing_file_check/cli/: __init__.py
missing_file_check/config/: __init__.py  database_loader.py  loader.py  models.py  validator.py
reports/: TASK-PHASE3-001_report.html  TASK-PHASE3-001_report.json  optimization_demo_report.html
scripts/: README.md  create_tables.py  migrate_statistics.py
test_data/: baseline_build_info.json  baseline_files.json  baseline_scan_result.json  target_build_info.json  target_files.csv  target_scan_result.json
tests/: __init__.py  test_adapters.py  test_core_functionality.py  test_phase3.py  test_simple_local_adapter.py
(+28 files in other folders)
